--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -8,6 +8,7 @@ import { Twitter, Github, Linkedin } from 'lucide-astro';
       <a href="/">Inicio</a>
       <a href="/about">Acerca de</a>
       <a href="/portfolio">Portafolio</a>
+      <a href="/quoter">Cotizador</a>
       <a href="/contact">Contacto</a>
     </div>
     <div class="social">
