--- a/src/pages/quoter.astro
+++ b/src/pages/quoter.astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = true;
 import Layout from "@/layouts/Layout.astro";
 import { design, electric, hydro, structural, voz, approval, visit } from "@/config";
 
