--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -93,7 +93,7 @@ import { cdn } from '@/config';
           </a>
         </div>
         <div class="team-member">
-          <a href="/">
+          <a href="">
             <img
               src={`${cdn}/equipo/bryan_silva.webp`}
               alt="Team Member - Bryan Silva"
